--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ContOrga</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/vue.js"></script>
@@ -22,7 +22,10 @@
       <div class="grid-siderbar-wrap">
         <div class="listitem-container">
           <div class="listitem">
-            <button type="button" class="btn listbtn listbtn-1">Item 1</button>
+            <button type="button" class="btn listbtn listbtn-1">
+
+              <span>Item 1</span>
+            </button>
           </div>
         </div>
       </div>
@@ -37,13 +40,16 @@
             Schiffsinformationen
           </div>
           <div class="grid-main-name">
-            Name:<input v-model="name">
+            <label for="tablename">Name:</label>
+            <input v-model="name" name="tablename" class="grid-main-name-input">
           </div>
           <div class="grid-main-eta">
-            ETA:<input v-model="eta">
+              <label for="tableta">eta:</label>
+            <input v-model="eta" name="tableeta" class="grid-main-name-eta">
           </div>
           <div class="grid-main-note">
-            Notiz:<input v-model="note">
+              <label for="tablenote">Notiz:</label>
+            <input v-model="note" name="tablenote" class="grid-main-name-note">
           </div>
         </div>
         <div class="grid-main-content">
@@ -62,7 +68,14 @@
               <th>Notiz</th>
             </thead>
             <tr>
-
+              <td>1</td>
+              <td>57000</td>
+              <td>LAPD 1234567</td>
+              <td>21.2.2018</td>
+              <td>20:32</td>
+              <td>n.g.</td>
+              <td>22.2.2018></td>
+              <td>dies ist eine Notiz</td>
             </tr>
           </table>
         </div>
@@ -87,5 +100,7 @@
   </div>
   <script src="js/index.js"></script>
   <script src="./js/renderer.js"></script>
+  <script src="./js/ship.js"></script>
 </body>
+
 </html>
